updating h1 tag with our name and also updating personal information under the p elements

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Kevin Phelps</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a former data analyst and prokect manager looking to break into coding and web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Ann Arbor, Michigan</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Watching/playing sports, playing cards, and hanging out with family</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Developer for an online poker company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Saline, Michigan</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like to know the ins and outs of how things work. I believe web development fits my work style and I also like the career prospectus.</p>
     </section>
 
     <footer id="footer">
