updating details in p elements

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm a former data analyst and prokect manager looking to break into coding and web development.</p>
+      <p>I'm a former data analyst and project manager looking to break into coding and web development.</p>
       <h1>Where I'm From</h1>
       <p>Ann Arbor, Michigan</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Watching/playing sports, playing cards, and hanging out with family</p>
+      <p>Watching/playing sports, playing card games, reading, and hanging out with family</p>
       <h1>What's your dream job?</h1>
       <p>Developer for an online poker company</p>
       <h1>Where do you live?</h1>
